# SomeLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt
src/: CMakeLists.txt  some.cpp  some.h
src/Empty/: CMakeLists.txt  Empty.cpp  Empty.h
src/Samples/: CMakeLists.txt  main.cpp
