
add_library(Empty STATIC Empty.h Empty.cpp)
add_library(lib::Empty ALIAS Empty)

set_target_properties(Empty PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}
    INTERFACE_LINK_DIRECTORIES ${LIB_DIR}

    ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LIB_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LIB_DIR}

    
)